Fri Apr 28 21:22:53 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.cpp:
        * ace/Service_Gestalt.cpp:

          More re-formatting to weed out those pesky tabs.

Fri Apr 28 20:57:19 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/config-sunos5.8.h:
        * ace/config-sunos5.9.h: Moved ACE_HAS_SENDFILE from Solaris 8 to
          Solaris 9. Solaris 8 supports sendfilev[64] but not sendfile,
          at least not without some patches I don't know about.

Fri Apr 28 20:13:41 UTC 2006  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_sunos5_g++.GNU:
        * include/makeinclude/platform_sunos5_sunc++.GNU:
          Solaris 9 puts sendfile() is a separate library, so LIBS needs
          -lsendfile on Solaris 9.

Fri Apr 28 18:03:11 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/ACE.cpp:
        * ace/DLL.cpp:
        * ace/DLL_Manager.cpp:
        * ace/Dynamic_Service_Base.cpp:
        * ace/Dynamic_Service_Dependency.cpp:
        * ace/Parse_Node.cpp:
        * ace/Service_Config.inl:
        * ace/Service_Config.cpp:
        * ace/Service_Gestalt.cpp:
        * ace/Service_Object.cpp:
        * ace/Service_Repository.cpp:
        * ace/Service_Types.cpp:
        * ace/Shared_Object.cpp:

          Applied formatting style consistent with ACE convention.

Fri Apr 28 15:48:25 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/Service_Config.cpp (open_i): ACE_DEFAULT_SVC_CONF shouldn't
          be enclosed in ACE_LIB_TEXT since it's defined in terms of
          ACE_LIB_TEXT already.

Fri Apr 28 15:49:21 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Makefile.am:
          Added new Service_Gestalt files to the appropriate lists.

Fri Apr 28 15:42:59 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Service_Config.cpp:
          Fixed a problem killing some wchar builds.

        * ace/Service_Gestalt.h: