@@ -302,21 +302,22 @@ ACE_Service_Gestalt::dump (void) const
 
 ACE_ALLOC_HOOK_DEFINE (ACE_Service_Type_Factory)
 
-  ACE_Service_Type_Factory::ACE_Service_Type_Factory (ACE_TCHAR const *name,
-                  int type,
-                  ACE_Location_Node *location,
-                  int active)
-    : name_ (name)
-    , type_ (type)
-    , location_ (location)
-    , is_active_ (active)
+ACE_Service_Type_Factory::ACE_Service_Type_Factory (ACE_TCHAR const *name,
+                                                    int type,
+                                                    ACE_Location_Node *location,
+                                                    int active)
+  : name_ (name)
+  , type_ (type)
+  , location_ (location)
+  , is_active_ (active)
 {
-  ACE_TRACE ("ACE_Service_Type_Factory::ACE_Service_Type_Factory");
-};
+  ACE_TRACE ("ACE_Service_Type_Factory::ACE_Service_Type_Factory")
+}
+
 
 ACE_Service_Type_Factory::~ACE_Service_Type_Factory (void)
 {
-  ACE_TRACE ("ACE_Service_Type_Factory::~ACE_Service_Type_Factory");
+  ACE_TRACE ("ACE_Service_Type_Factory::~ACE_Service_Type_Factory")
 }
 
 
